2006-07-15  Matthias Wimmer  <m@tthias.eu>

    * clients.c: implemented SASL authentication using cyrus SASL
    * mio/mio.c: same
    * jadc2s.c: same
    * jadc2s.h: same
    * configure.ac: same
    * connect.c: same
    * util/util.h: same
    * util/jid.c: same
    * conn.c: same

2006-05-21  Matthias Wimmer  <m@tthias.eu>

    * util/xhash.c: fixing xhash handling (key did match key123)

2006-05-20  Matthias Wimmer  <m@tthias.eu>

    * util/util.h: better memory performance for xhash
    * util/xhash.c: same

2006-04-27  Matthias Wimmer  <m@tthias.eu>

    * clients.c: support for HTTP forwards (patch by Tomasz Sterna)
    * jadc2s.c: same and support for writing connection count to file
    * jadc2s.h: same
    * jadc2s.xml.dist: same
    * mio/mio.c: epoll support (patch by Tomasz Sterna)
    * util/log.c: possibility to select syslog facility at configure time

2006-04-26  Matthias Wimmer  <m@tthias.eu>

    * clients.c: fixing a compiler warning of gcc

2005-11-22  Matthias Wimmer  <m@tthias.net>

    * configure.in: make IDN a requirement, check for GNU SASL

2005-11-01  Matthias Wimmer  <m@tthias.net>

    * mio/mio.c: changing typecast for accept() call to fix a compiler warning
    * clients.c: fixing memory leak, fixing STARTTLS not to send an error back

2005-04-07  Matthias Wimmer  <m@tthias.net>

    * clients.c: implemented STARTTLS
    * jadc2s.c: same
    * jadc2s.h: same

2004-10-09  Matthias Wimmer  <m@tthias.net>

    * clients.c: Fixing problem reported by Pablo Herrero

2004-09-07  Matthias Wimmer  <m@tthias.net>

    * xmlparse/*: removed expat sources from jadc2s and link against libexpat
    * configure.in: same
    * jadc2s.h: same
    * Makefile.am: same
    * util/config.c: same
    * util/util.h: make some function arguments constant

2004-09-03  Matthias Wimmer  <m@tthias.net>

    * util/util.c: jid_environment has do be defined even without libidn

2004-09-01  Matthias Wimmer  <m@tthias.net>
