@@ -1,3 +1,8 @@
+2006-07-19  Matthias Wimmer  <m@tthias.eu>
+
+    * clients.c: adding sc:c2s attribute before forwarding stanzas to sm
+    * connect.c: sanity checks for right recipient
+
 2006-07-15  Matthias Wimmer  <m@tthias.eu>
 
     * clients.c: implemented SASL authentication using cyrus SASL
